[package]
name = "axum-todos"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.108"
axum = "0.6.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
axum-test-helper = "0.3.0"
