[workspace]
resolver = "2"

members = ["app", "tester"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.108"
axum = "0.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
