[workspace]
resolver = "2"

members = ["app", "tester"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.206", features = ["derive", "rc"] }
serde_json = "1.0.124"
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
