[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
color-eyre = "0.6"
thiserror = "1.0.63"

[dev-dependencies]
tester = { path = "../tester" }

[profile.dev.package.backtrace]
opt-level = 3
