[package]
name = "tester"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
