[package]
name = "tester"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = "1.0"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
reqwest = { version = "0.11.14", default-features = false, features = [
  "json",
  "stream",
  "multipart",
] }
